Nutupane: fix alignment of details panel to table header.

--- a/app/assets/stylesheets/widgets/nutupane.scss
+++ b/app/assets/stylesheets/widgets/nutupane.scss
@@ -15,7 +15,6 @@ tbody {
 }
 
 table.details-visible {
-  display: block;
   width: 20%;
   float: left;
 }
@@ -118,8 +117,7 @@ input {
 .nutupane-details-open {
   @include transition(background-color 1.25s ease-in-out);
   display: block;
-  float: left;
-  width: 79.8%;
+  width: inherit;
   opacity: 1;
   border-radius: 0;
 }
